# autorota

./: .gitignore  2026-06-03-polish-plan.md  BUG_LIST.md  BUG_LOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GAPS.md  IOS_BUGS.md  Makefile  README.md  REQUESTED_CHANGES.md  ROADMAP.md  ROTA_REDESIGN_PLAN.md  SYNC_MULTIROLE_FIX.md  TODO.md  TODO_LIST.md  USER_TEST_NOTES.md  brainstorming.md  deny.toml  lefthook.yml  notes.md  plan_log.md  pyproject.toml  release-plan.md  release-plz.toml  revised_brainstorming.md  test.py  test_employee.py  test_shift.py  todo_from_test_notes.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  perf.yml  pr-title.yml  release-plz.yml  release.yml  rust-checks.yml  supply-chain.yml
bugs/unpatched/: menu-other-pages-untappable-after-first-nav.md
crates/app-desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/app-desktop/src/: main.js  main.ts  styles.css
crates/app-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/app-desktop/src-tauri/src/: lib.rs  main.rs
crates/autorota-core/: Cargo.toml
crates/autorota-core/benches/: export.rs  hotpath.rs  save.rs  scheduler.rs
crates/autorota-core/i18n/ar/: errors.ftl
crates/autorota-core/i18n/bn/: errors.ftl
crates/autorota-core/i18n/en/: errors.ftl
crates/autorota-core/i18n/es/: errors.ftl
crates/autorota-core/i18n/hi/: errors.ftl
crates/autorota-core/i18n/zh-Hans/: errors.ftl
crates/autorota-core/i18n/zh-Hant/: errors.ftl
crates/autorota-core/migrations/: 001_initial.sql  002_weekdays_and_cascade.sql  003_employee_work_prefs.sql  004_history_support.sql  005_nullable_template_id.sql  006_roles_table.sql  007_employee_name_split.sql  008_overrides.sql  009_employee_wages.sql  010_employee_wage_currency.sql  011_sync_support.sql  012_staging_commits.sql  013_perf_indexes.sql  014_availability_progress.sql  015_remove_finalized_staging.sql  016_rename_commits_to_saves.sql  017_rename_committed_at_to_saved_at.sql  018_save_tags.sql  019_save_restored_at.sql  020_override_source.sql  021_employee_contact.sql  022_preferred_contact.sql  023_employee_email.sql  024_shift_role_requirements.sql  025_role_requirements_sync.sql  026_saves_rota_id_index.sql  027_save_source.sql
crates/autorota-core/src/: demo.rs  i18n.rs  lib.rs  sample.rs  sample_debug.rs
crates/autorota-core/src/db/: mod.rs  queries.rs
crates/autorota-core/src/exchange/: mod.rs
crates/autorota-core/src/export/: config.rs  csv.rs  grid.rs  ics.rs  json.rs  markdown.rs  mod.rs  preview.rs  xlsx.rs
crates/autorota-core/src/export/pdf/: by_role.rs  employee.rs  employee_schedule.rs  mod.rs  theme.rs  weekly.rs
crates/autorota-core/src/import/: mod.rs  roster.rs
crates/autorota-core/src/models/: assignment.rs  availability.rs  commit.rs  employee.rs  mod.rs  overrides.rs  role.rs  rota.rs  save.rs  shift.rs  shift_history.rs  sync.rs  validation.rs
crates/autorota-core/src/scheduler/: mod.rs  scoring.rs  tiebreak.rs
crates/autorota-core/src/testutil/: assertions.rs  builders.rs  corpus.rs  db.rs  mod.rs
crates/autorota-core/tests/: db_concurrency_test.rs  db_error_paths_test.rs  db_integration.rs  edge_cases_test.rs  export_pdf_content_test.rs  export_test.rs  import_rollback_test.rs  migration_matrix_test.rs  queries_coverage_test.rs  save_diff_test.rs  scheduler_determinism_test.rs  scheduler_integration_test.rs  scheduler_invariants_test.rs  scheduler_overnight_test.rs  scheduler_test.rs
crates/autorota-core/tests/helpers/: mod.rs
crates/autorota-ffi/: Cargo.toml
crates/autorota-ffi/src/: error.rs  lib.rs  seed.rs  types.rs
crates/uniffi-bindgen/: Cargo.toml
design/app-icon/: README.md
design/marketing/: rota-device-frame-sandbox.html
design/marketing/frame-cli/: frame.mjs  package.json
docs/: availability-hold-drag-lasso.md  bulletproofing-changelog.md  bulletproofing-pass2-2026-04-29.md  bulletproofing-plan.md  ci-cd-guide.md  ci-cd-improvement-plan.md  orientation.md  overview.md  perf-runbook.md  perf-testing.md  performance.md  quick-bar-report.md  releasing.md  rust-engine-perf-roadmap.md
docs/runbooks/: README.md  customer-data-extraction.md  db-corruption-recovery.md  hot-fix-release.md  sync-divergence.md
docs/sessions/: 2026-07-20-marketing-site-launch.md
docs/specs/: rota-overflow-menu.md
docs/superpowers/plans/: 2026-03-30-icloud-sync.md  2026-04-17-auto-save-activity-log.md
docs/superpowers/specs/: 2026-03-28-radial-menu-design.md  2026-03-30-icloud-sync-design.md  2026-03-30-rota-export-design.md  2026-04-09-history-tab-flat-assignments-design.md  2026-04-17-auto-save-activity-log-design.md
perf/: history.jsonl
scripts/: build_xcframework.sh  check-platform-isolation.sh  perf_report.py
src/autorota/: __main__.py  employee.py  rota.py  schedule.py  shift.py  shift_overrides.json  shift_utils.py  shifts.json  shop.py  tiebreak.py  utils.py
src/autorota.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/autorota/gui/: __init__.py  __main__.py  app.py  views.py  widgets.py
website/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
website/src/: consts.ts  content.config.ts
website/src/components/: AppStoreBadge.astro  AudienceStrip.astro  DeviceShot.astro  DownloadCTA.astro  FeatureSection.astro  FlowCard.astro  Footer.astro  Header.astro  Hero.astro  HowItWorks.astro  PrivacyPanel.astro  ScreenshotRail.astro  TutorialViewer.astro
website/src/content/docs/: privacy.md  support.md
website/src/data/: tutorials.ts
website/src/layouts/: DocLayout.astro  SiteLayout.astro
website/src/pages/: 404.astro  index.astro  privacy.astro  support.astro  tutorials.astro
website/src/styles/: global.css
