[workspace]
members = [
    "crates/autorota-core",
    "crates/app-desktop/src-tauri",
    "crates/autorota-ffi",
    "crates/uniffi-bindgen",
]
resolver = "2"

[workspace.package]
version = "0.9.2"
# Internal app crates — never published to crates.io. Also what lets
# cargo-deny's `private = { ignore = true }` skip license checks on them.
publish = false
edition = "2024"

[profile.release]
# Thin LTO + a single codegen unit give the scheduler / export hot paths more
# cross-crate inlining for ~10-20% runtime (and a smaller dylib — see
# docs/performance.md). Benches inherit these settings via the `bench` profile.
lto = "thin"
codegen-units = 1
# `panic = "abort"` + `strip = true` would trim the dylib further but lose
# backtrace detail; left off until app size becomes a hard constraint.

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
rand_chacha = "0.3"
