[package]
name = "autorota-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
base64 = "0.22.1"
printpdf = "0.3"
rust_xlsxwriter = "0.79"
calamine = "0.24"
csv = "1.3"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }

[features]
test-helpers = []

[dev-dependencies]
autorota-core = { path = ".", features = ["test-helpers"] }
tempfile = "3"
