[package]
name = "autorota-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
base64 = "0.22.1"
printpdf = "0.3"
rust_xlsxwriter = "0.79"
calamine = "0.24"
csv = "1.3"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

[features]
test-helpers = ["dep:rand", "dep:rand_chacha"]
perf-helpers = ["test-helpers"]

[dev-dependencies]
autorota-core = { path = ".", features = ["test-helpers"] }
tempfile = "3"
criterion = { workspace = true }
# Both already in Cargo.lock transitively (fluent, printpdf) — no new crates.
fluent-syntax = "0.11"
lopdf = "0.26"

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "hotpath"
harness = false

[[bench]]
name = "save"
harness = false

[[bench]]
name = "export"
harness = false
