[package]
name = "autorota-ffi"
version.workspace = true
edition.workspace = true
autobins = false

[lib]
# staticlib → .a files for iOS/macOS linking
# cdylib    → .dylib for uniffi-bindgen introspection during binding generation
crate-type = ["staticlib", "cdylib"]

[dependencies]
autorota-core = { path = "../autorota-core" }
uniffi = "0.28"
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror = "2"

[features]
# Enables the `autorota_seed_perf_corpus` FFI hook used by XCUITest perf
# tests. Default-off so release artifacts never link the corpus generator.
perf-helpers = ["autorota-core/perf-helpers"]

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

# uniffi-bindgen is installed separately: cargo install uniffi-bindgen --version 0.28.3
# Run: uniffi-bindgen generate --library target/.../libautorota_ffi.dylib --language swift --out-dir ...
