[package]
name = "uniffi-bindgen"
version.workspace = true
edition.workspace = true
# Standalone binary for generating UniFFI language bindings.
# Must use the same uniffi version as autorota-ffi.
# Usage: cargo run -p uniffi-bindgen -- generate --library <dylib> --language swift --out-dir <dir>

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
