[package]
name = "app-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
autorota-core = { path = "../../autorota-core" }
